# sofcheck

./: .clang-format  .clang-tidy  .directory  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  DESIGN  DESIGN.md  EXPERIMENTS  README.md  TODO  sofcheck.kdev4
.github/workflows/: build.yml
bench/: benchmark_main.cpp  movegen.cpp
bench/core/: bench_boards.h  bench_is_move_legal.cpp  bench_move_chain.cpp  bench_xmacro.h
cmake/: Benchmark.cmake  BoostStacktrace.cmake  CxxOpts.cmake  Generators.cmake  GitRevision.cmake  JsonCpp.cmake  PGO.cmake  Platform.cmake
cmake/overrides/: MSVCStaticBuild.cmake  StaticLink.cmake
cmake/scripts/: GitRevisionConfig.cmake
cmake/toolchains/: MinGW64Toolchain.cmake
docs/: design.md  gameset.md  howitworks.md
selftest/: CMakeLists.txt  README.md  bench.cpp  bench_xmacro.h  boards.fen  chess_intf.h  run_self_tests.sh  selftest_config.h.in  test.cpp  util.h
selftest/dodecahedron/: .clang-tidy  README.md  bitboard.cpp  bitboard.h  bitboard_vars.h  bitutil.h  board.cpp  board.h  board_defines.h  cpputil.cpp  cpputil.h  intf.h  move_stuff.h  movegen.cpp  movegen.h  moves.cpp  moves.h  movestr.cpp  movestr.h
selftest/sofcheck/: intf.h
src/: config.h  config.h.in  main.cpp  types.h  version.h.in
src/bot_api/: api_base.h  client.h  connection.cpp  connection.h  connector.h  options.cpp  options.h  server.h  strutil.cpp  strutil.h  types.h
src/bot_api/clients/: uci.cpp  uci.h
src/bot_api/clients/private/: uci_option_escape.cpp  uci_option_escape.h
src/bot_api/clients/test/: uci.cpp  uci_in1.txt  uci_out1.txt  uci_out2.txt  uci_run.sh
src/core/: bitboard.h  board.cpp  board.h  init.cpp  init.h  move.cpp  move.h  move_chain.cpp  move_chain.h  move_parser.cpp  move_parser.h  movegen.cpp  movegen.h  strutil.cpp  strutil.h  types.h
src/core/private/: between.h  bit_consts.h  bitboard.h  geometry.h  magic.cpp  magic.h  magic_util.h  rows.h  zobrist.cpp  zobrist.h
src/core/test/: selftest.cpp  selftest.h
src/engine_base/: api_base.h  client.h  connection.cpp  connection.h  connector.h  options.cpp  options.h  server.h  strutil.cpp  strutil.h  types.h
src/engine_clients/: uci.cpp  uci.h
src/engine_clients/private/: uci_option_escape.cpp  uci_option_escape.h
src/engine_clients/test/: uci.cpp  uci_in1.txt  uci_in2.txt  uci_out1.txt  uci_out2.txt  uci_run.sh
src/eval/: coefs.h  evaluate.cpp  evaluate.h  features.json  score.h  types.h
src/eval/feat/: feat.cpp  feat.h
src/eval/feat/test/: feat.cpp
src/eval/private/: cache.h  consts.h  pawn_cache.cpp  pawn_cache.h  weight_traits.h
src/eval/test/: score.cpp  unit_test.cpp
src/gameset/: reader.cpp  reader.h  types.cpp  types.h
src/search/: score.h  search.cpp  search.h
src/search/private/: consts.h  diagnostics.h  evaluate.cpp  evaluate.h  job.cpp  job.h  job_runner.cpp  job_runner.h  limits.cpp  limits.h  move_picker.cpp  move_picker.h  score.h  transposition_table.cpp  transposition_table.h  types.cpp  types.h  util.cpp  util.h
src/search/test/: unit_test.cpp
src/util/: bit.h  compiler.h  copy_ptr.h  defer.h  fileutil.cpp  fileutil.h  formatter.cpp  formatter.h  hash.h  ioutil.cpp  ioutil.h  logging.cpp  logging.h  math.h  misc.cpp  misc.h  no_copy_move.h  operators.h  optparse.cpp  optparse.h  parallel.cpp  parallel.h  prefetch.h  queue.h  random.cpp  random.h  result.h  smallvec.h  strutil.cpp  strutil.h  valarray.h
src/util/test/: parallel.cpp  strutil.cpp  unit_test.cpp  valarray.cpp
src/version/: version.cpp.in  version.h
tools/: add_license_headers.py  ci_build.py  communicate_process.py  concat_datasets.py  fix_header_guards.py  owl.py.in  release.sh  run_smoke_test.py  run_test_positions.py  shuffle_weights.py
